--- a/src/markdown-pages/mark-kvetny/index.mdx
+++ b/src/markdown-pages/mark-kvetny/index.mdx
@@ -1,8 +1,9 @@
 ---
-slug: "/mark-kvetny"
-artist: "Mark Kvetny"
-title: "Authoring Interactive Documents with MDX"
-thumbnail: "thumb-mark.png"
+slug: '/mark-kvetny'
+artist: 'Mark Kvetny'
+title: 'Interactive MDX'
+description: 'Authoring Interactive Documents with MDX'
+thumbnail: 'thumb-mark.png'
 ---
 
 Since their inception, computers have quickly become the main channel of communicating information, and have established themselves firmly among traditional forms of media such as print and film.
