--- a/src/markdown-pages/mark-kvetny/index.mdx
+++ b/src/markdown-pages/mark-kvetny/index.mdx
@@ -6,7 +6,7 @@ description: 'Authoring Interactive Documents with MDX'
 thumbnail: 'cover.png'
 ---
 
-import { Mandelbrot } from "./mandelbrot"
+import { Mandelbrot } from './mandelbrot';
 
 Nowadays text is ubiquitous. Whether digital or analogue, text mediates almost any part of our experience in modern society. This trend has been especially amplified with the rise of computers, whose native language, the computer program, is itself a form of text.
 
@@ -19,33 +19,32 @@ The thesis explores ways in which one can simplify the authoring experience of i
 
 To demonstrate the possible types of experiences that can be created with MDX, I produced three interactive documents, each representing an aspect.
 
-You can read more about them below, and find each of them live under https://interactive-documents.vercel.app/.
+You can read more about them below, and find each of them live under https://interactive-documents.vercel.app/
 
-
-#### Explaining the Mandelbrot Set, Interactively 
+### Explaining the Mandelbrot Set, Interactively
 
 <Mandelbrot />
 
-explorable example of a Mandelbrot Set
+**↑ Interactive example of a Mandelbrot Set**
 
 Interactive documents are a powerful way of explaining ideas. By interweaving text with explorable examples, it allows the reader to get an intuitive understanding of complex systems.
 
 This essay gives an interactive explanation to the Mandelbrot Set, a notoriously famous object of Computer Graphics. It is famous for its intricate beauty and fractal patterns, but it is rarely understood from where these patterns emerge.
 The essay allows the reader to gain an understanding actively and playfully.
 
-https://interactive-documents.vercel.app/mandelbrot
+Read the essay here: https://interactive-documents.vercel.app/mandelbrot
 
-#### Parametric text
+### Parametric text
 
-![screenshot of the Parametric Text example](parametric-v2.png)
+![Screenshot of the Parametric Text example](parametric-v2.png)
 
-How does a truly dynamic text that responds to the state of the reader look like? This document demonstrates the idea of a parametric document, a form of text that changes depending on the parameters that the reader inputs. It displays different levels of detail, depending on the reader's attention, and provides contextual information. 
+How does a truly dynamic text that responds to the state of the reader look like? This document demonstrates the idea of a parametric document, a form of text that changes depending on the parameters that the reader inputs. It displays different levels of detail, depending on the reader's attention, and provides contextual information.
 
 https://interactive-documents.vercel.app/parametric-essay
 
-#### Digital Garden
+### Digital Garden
 
-![screenshot of the Digital Garden example](garden-v2.png)
+![Screenshot of the Digital Garden example](garden-v2.png)
 
 Interactive Document can not only influence the internal structure of documents, but can also make the ways in which documents relate to each other more explicit.
 
@@ -53,5 +52,4 @@ This example demonstrates how interactive documents can untangle reading into a 
 
 The connections between the notes are visualised through an interactive network graph. The garden was seeded by a selection of my personal notes and texts that I collected during thesis research.
 
-
-https://interactive-documents.vercel.app/blog 
+#### Try it out here: <https://interactive-documents.vercel.app/blog>
